Fixes text boxes overlap. Fixes the footer div from being hidden on displays smaller than 370px.

--- a/isisisreleasedyet/static/css/bootstrap.site.css
+++ b/isisisreleasedyet/static/css/bootstrap.site.css
@@ -9,17 +9,20 @@ html {
     /* background-size: 1920px; */
     background-size: 2000px;
     background-color: #44a2e9;
+    height: 100%;
 }
 
 body {
     background-color: transparent;
     font-size: 16px;
+    height: 100%;
 }
 
 div.content {
     background-color: #44a2e9;
     text-align: center;
     vertical-align: middle;
+    margin-bottom: 4em;
 }
 
 @media screen and (min-height: 721px) {
@@ -46,7 +49,7 @@ div.content {
     }
 }
 
-@media screen and (max-height: 330px) {
+@media screen and (max-height: 370px) {
     div.content {
 	margin-top: 2em;
     }
@@ -116,7 +119,7 @@ h1 {
 ------------------------------------------------- */
 
 .footer {
-    position: fixed;
+    position: absolute;
     bottom: 1em;
     padding-top: 2em;
     padding-left: 10px;
@@ -141,3 +144,12 @@ h1 {
     font-weight: 400;
     color: white;
 }
+
+/* Bootstrap CSS workarounds */
+
+.container {
+    position: relative !important;
+    min-height: 100% !important;
+}
+
+
